          a style with "symmetric" tab skins (they look fine with bottom tabs in most
          cases) or don't use bottom tabs.
          Or use classic theme :)
          
        * New menubar added. It can be hidden (as a per container setting) and contains
          many options which are normally only accessible via various option pages.

Version 0.0.8.98 - 2004/10/17

        * fixed middle click close did not respect the "warn onl close" setting.
        
        * fixed small cosmetical issue with the status bar tn icon.
        
        * fixed typing notify icon not clickable if char count panel was disabled.
        
        * changed font and color configuration dialog. It now uses the same system
          also used by the contact list font configuration screen. It's more
          convient and easier to setup. You will probably have to re-setup some of
          your font and color options.
          
        * redone the message log options dialog. Now, with the fonts moved to their
          own page, this option page is less cluttered and easier to use.
          
        * changed the code which loads the smiley button icon. It now uses a button-
          icon (if the smileypack contains one). If not, it tries to load the :) icon
          and resizes it to 16x16 (if necessary). If all fails, a default icon from
          the icon.dll is used.
          
        * made the thin (1pixel) grid lines optional. They are causing troubles with
          some versions of the rich edit control. If you happen to get "invisible"
          messages at the end of the log, turn off the "Thin grid lines" option.
          
        * changed the way indent works. There is now also a right-indent value.
          If no indent value is given, a default of 3 pixel is used for left and right
          margins.   

        * ARGH, don't free() a pointer which might be needed ages later :)
          This one was ugly, causing crashes after a failed message delivery.